--- a/docker/dev.docker-compose.yaml
+++ b/docker/dev.docker-compose.yaml
@@ -10,6 +10,7 @@ services:
       - 8080:8080
     volumes:
       - ../backend:/app
+      - /var/run/docker.sock:/var/run/docker.sock  # Docker.sock ekleniyor
     networks:
       - codinlab
 
