--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,6 +42,7 @@
     "react-i18next": "^13.5.0",
     "react-multi-carousel": "^2.8.4",
     "react-redux": "^9.1.0",
+    "recharts": "^2.12.7",
     "yup": "^1.4.0"
   },
   "devDependencies": {
