--- a/backend/.air.toml
+++ b/backend/.air.toml
@@ -7,7 +7,7 @@ tmp_dir = "tmp"
   bin = "./tmp/main"
   cmd = "go build -o ./tmp/main  ./cmd/codeinlab/main.go"
   delay = 1000
-  exclude_dir = ["assets", "tmp", "vendor", "testdata"]
+  exclude_dir = ["assets", "tmp", "vendor", "testdata", "usercodes"]
   exclude_file = []
   exclude_regex = ["_test.go"]
   exclude_unchanged = false
