--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -12,6 +12,16 @@ server {
         proxy_pass http://api:8080;
     }
 
+    location /api/v1/private/socket/ws {
+        proxy_pass http://api:8080;
+        
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "Upgrade";
+        proxy_set_header Host $host;
+    }
+
+
     location /_next {
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header Host $host;
