--- a/docker/dev.docker-compose.yaml
+++ b/docker/dev.docker-compose.yaml
@@ -29,7 +29,7 @@ services:
     container_name: codinlab-nginx
     restart: always
     volumes:
-      - ./nginx:/etc/nginx/conf.d
+      - ./nginx/dev.conf:/etc/nginx/conf.d/default.conf
     ports:
       - 80:80
       - 443:443
