--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,16 +37,17 @@
     "react": "^18.2.0",
     "react-activity-calendar": "^2.3.5",
     "react-apexcharts": "^1.4.1",
-    "react-cookie": "6.1.1",
+    "react-cookie": "^7.2.2",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-i18next": "^13.5.0",
     "react-multi-carousel": "^2.8.4",
     "react-redux": "^9.1.0",
     "recharts": "^2.12.7",
+    "sharp": "^0.33.5",
     "yup": "^1.4.0"
   },
   "devDependencies": {
-    "locize-cli": "7.14.14"
+    "locize-cli": "^8.3.0"
   }
 }
